feat: import cyberpunk review post

--- a/say-hi/index.html
+++ b/say-hi/index.html
@@ -318,7 +318,7 @@ You want to sell something to me.You want to use me to sell something to my rea
   <li>You want to try and convince me to let you write a sponsored post.</li>
   <li>You want to yell at me, argue in bad faith, or generally be a dickwad.</li>
 </ul> 
-<p>The best way to reach me is through e-mail. If you really want to, I am also on <a href="">Mastodon</a>.</p>
+<p>The best way to reach me is through e-mail. If you really want to, I am also on <a href="https://mastodon.social/@jcachada">Mastodon</a>.</p>
 <p>You can send me an email at j cachada (without the whitespace) at the posteo.net servers. If this looks like a strange way to give you my e-mail address: it&rsquo;s spelled this way so bots and crawlers can&rsquo;t easily pick it up and send me tons of spam.</p>
 <p>If you want to send me an encrypted message (which I recommend you do), you can encrypt it using my public PGP key.</p>
 <details> <summary class="summary clickable-header big-top-pull"><h4>public PGP key</h4></summary>
