--- a/weblog/debutnovel/index.html
+++ b/weblog/debutnovel/index.html
@@ -8,7 +8,7 @@
 <title>debutnovel | joão&#39;s website 🐟</title>
 <meta name="title" content="debutnovel" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
-<meta name="keywords" content="debutnovel,development,fiction,journaling,reading,weblog,writing," />
+<meta name="keywords" content="blog,cyberpunk,debutnovel,development,fiction,game,journaling,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="debutnovel" />
