feat: add 2023 reading list

--- a/weblog/why-this-blog-exists/index.html
+++ b/weblog/why-this-blog-exists/index.html
@@ -22,6 +22,7 @@ I had plans to use that website as a showcase for myself. I shared my résumé t
 
 
 
+
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://jcachada.dev/images/share.png"/>
 
@@ -335,15 +336,15 @@ javascript, there are no ads, and there is no tracking. The whole thing is far l
 conscious effort not to sell myself. Bear with me, it&rsquo;s a hard habit to train myself out of. I will still need it in other areas of my life - just not here.</p>
 <p>If I ever need to have a different website that serves a different purpose, I will. Just not here.</p>
 <p>I hope that whoever ends up staying with this blog appreciates its content. I also hope to regain the ability to focus on what fulfills me, instead of feeling pressured to maintain an image that brings me little joy.</p>
-<div class="footnotes" role="doc-endnotes">
+<section class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
-<li id="fn:1">
+<li id="fn:1" role="doc-endnote">
 <p>Most of the content will not be ported over to this website. I might port over a post (or two) that I think is meaningful, but the default is that most things will be
 preserved on the old github repository, and nowhere else.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
-</div>
+</section>
 
 </content>
 <p>
