--- a/say-hi/index.html
+++ b/say-hi/index.html
@@ -8,19 +8,20 @@
 <title>Say Hi | joão&#39;s website 🐟</title>
 <meta name="title" content="Say Hi" />
 <meta name="description" content="Please say hello if you:
-Want to say hi.Want to chat about something.Want to comment on my website or flag a bug.Want to share something with me that you think might interest me.Please do not reach out to me if:
-You want to sell something to me.You want to use me to sell something to my readers.You want to try and convince me to let you write a sponsored post." />
+ Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
+ You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="Say Hi" />
 <meta property="og:description" content="Please say hello if you:
-Want to say hi.Want to chat about something.Want to comment on my website or flag a bug.Want to share something with me that you think might interest me.Please do not reach out to me if:
-You want to sell something to me.You want to use me to sell something to my readers.You want to try and convince me to let you write a sponsored post." />
+ Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
+ You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://jcachada.dev/say-hi/" /><meta property="og:image" content="https://jcachada.dev/images/share.png"/><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="João Cachada&#39;s website" />
+
 
 
 
@@ -29,17 +30,17 @@ You want to sell something to me.You want to use me to sell something to my rea
 
 <meta name="twitter:title" content="Say Hi"/>
 <meta name="twitter:description" content="Please say hello if you:
-Want to say hi.Want to chat about something.Want to comment on my website or flag a bug.Want to share something with me that you think might interest me.Please do not reach out to me if:
-You want to sell something to me.You want to use me to sell something to my readers.You want to try and convince me to let you write a sponsored post."/>
+ Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
+ You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post."/>
 
 
 
 <meta itemprop="name" content="Say Hi">
 <meta itemprop="description" content="Please say hello if you:
-Want to say hi.Want to chat about something.Want to comment on my website or flag a bug.Want to share something with me that you think might interest me.Please do not reach out to me if:
-You want to sell something to me.You want to use me to sell something to my readers.You want to try and convince me to let you write a sponsored post.">
+ Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
+ You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post.">
 
-<meta itemprop="wordCount" content="204"><meta itemprop="image" content="https://jcachada.dev/images/share.png"/>
+<meta itemprop="wordCount" content="223"><meta itemprop="image" content="https://jcachada.dev/images/share.png"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -319,21 +320,40 @@ You want to sell something to me.You want to use me to sell something to my rea
   <li>You want to yell at me, argue in bad faith, or generally be a dickwad.</li>
 </ul> 
 <p>The best way to reach me is through e-mail. If you really want to, I am also on <a href="https://mastodon.social/@jcachada">Mastodon</a>.</p>
-<p>You can send me an email at j cachada (without the whitespace) at the posteo.net servers. If this looks like a strange way to give you my e-mail address: it&rsquo;s spelled this way so bots and crawlers can&rsquo;t easily pick it up and send me tons of spam.</p>
+<p>You can send me an email at jmcs. cachada (without the whitespace) at the protonmail.com servers. If this looks like a strange way to give you my e-mail address: it&rsquo;s spelled this way so bots and crawlers can&rsquo;t easily pick it up and send me tons of spam.</p>
 <p>If you want to send me an encrypted message (which I recommend you do), you can encrypt it using my public PGP key.</p>
 <details> <summary class="summary clickable-header big-top-pull"><h4>public PGP key</h4></summary>
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-<p>mDMEZLnA7xYJKwYBBAHaRw8BAQdA+W3t5xjFwh9xmzyzOShDd6cwoW5ZVwZDMl8T
-mcvKStq0HmpjYWNoYWRhIDxqY2FjaGFkYUBwb3N0ZW8ubmV0PoiZBBMWCgBBFiEE
-zfgAmjcLY0uVGxeSQPFpr7ceLUcFAmS5wO8CGwMFCQWlkEEFCwkIBwICIgIGFQoJ
-CAsCBBYCAwECHgcCF4AACgkQQPFpr7ceLUcHZgEAhlGG71Yu5gPZGAwLsq8NAwE8
-2dOjcZ/50ZqZVEbnPNAA/jq60sPBOlYM3jU9cFsbuCe9+Y2l1nr7TWxoIVnTzd8D
-uDgEZLnA7xIKKwYBBAGXVQEFAQEHQDN+hBk0jx3/Z1L117HO4KO3ze/egDQHpL7W
-aIzI2XxgAwEIB4h+BBgWCgAmFiEEzfgAmjcLY0uVGxeSQPFpr7ceLUcFAmS5wO8C
-GwwFCQWlkEEACgkQQPFpr7ceLUeGZQD9G9XfEJiRxlvd8z2vgC7xeHcnxsoExPVf
-NCuw7dR2CvUBAPazaRTZX94CCegBYJb42fy06pwJkfXkQkFxjAPd1LgJ
-=KQoh</p>
-<p>&mdash;&ndash;END PGP PUBLIC KEY BLOCK&mdash;&ndash;</p>
+<p>xsBNBFebbFABCADhLJt2ecDvEI1lxKYtt2lUgzHekQ4LEIRpcqSKtVIpUFzA
+IEskQdRUpr/iMXLB7eLYVOCmMzLNv9n+Zg+MzlC3Lcc4jfJpG/HzEpPUwn1i
+s1F493ai+PDm08hkiiP1zXQxCq9e7D89PXwhzeW5DU4K/UsyHtVfWWXSizt/
+GDCQptNp0vgzo5QSMr6inyWnl5lZV4LOW6w6QLM7DCLJyq9MDJyQiAiFqKvq
+M7mlqQhq+t8I30piweGmpMHLdZZkg87zBO6uw1MAUrGngLAcIpRSylyNNwKX
+88hWF//3C7D9XtxOB7M2DDax1agZTybGuyk7GmSnNNMZoM65aoJjXZNRABEB
+AAHNOWptY3MuY2FjaGFkYUBwcm90b25tYWlsLmNvbSA8am1jcy5jYWNoYWRh
+QHByb3Rvbm1haWwuY29tPsLAfwQQAQgAKQUCWN78ggYLCQcIAwIJEJKLj1ED
+hkfdBBUICgIDFgIBAhkBAhsDAh4BAAoJEJKLj1EDhkfdbEQIAMvAE24O/rgO
+rvUd41d8cFHukd9ceRxMfD2Jp4QLXdWjl77O6/Z32tdzE0FVddkRslGZ85cj
+dGLz9I8hotoQz06bEaNrjguyiY5fcWeh48SI6uhn4umhzYFRqfD+nYCDJ0Qh
+l4sxUlazLPG/5sUoXrSbyMWkDyjg/4APC3Mzc4IeyaA5tCXHFgHgAhkWsTSV
+IoHPrLEUH9uHymnK+qjQ2IKKHk7tSut5XWu2jTVR8PN2qzVR6gpvGYmrGesj
+XrqnAaf0oRjSifbcPs3bIfLNB/BZaqbFqo7xcY31LFXOVKajnIElqdLcHv+8
+IRqwdvvNkz8CSjsxiWIHEfXkvqoOb1DOwE0EV5tsUAEIANFLZ3cRcHxy+XLP
+XJs6ayqUlqMf4Zk7h5M0kT2XH+uQdrjkx73s9OYvoS1Ur7ovC97m8v60cBuR
+r67KCukgx2oNoFtdyo5+RBhGnHofNVXw0IsQJjK+3lN6E6TwaWkJNkeyNRyO
+ktyujP5nm+21+1C3ygb+UnfulOCe1nfvUqiL3yhS5WGsta4+NaTLFNRfKkoQ
+fg4dgE0+W2h4fxheLW7HSsbj+2SfavAlpoOrhyKy9ikeMhpxmrriEzhv7LRA
+RKiIzzzAs3lSubpdND3iHwIWFYKyXTfrgrvv0NVHZz/lCRC7FePzTKU1ZwRC
+7FWFzuMAO+4VIwmzE5sQRXjgn28AEQEAAcLAaQQYAQgAEwUCWN78ggkQkouP
+UQOGR90CGwwACgkQkouPUQOGR90nJQgAgRLiaymZjICUD0dhq8awIkLK0MV0
+puD7rvvaaBAz/BEXrDNMV4Zxwb+2m6yYBZ9sjZ7X7y3TNPZRIGI23nGrqLas
+HjCQ66X1tBCwZrvo2/XzlOdcYITFHXZa5ax3+g+FbDppTW8ekdEncJmHLYvc
+t4JpX54t5cCgdeHC9YIQY79m1rK+MgLPVKvgbUdjbGdYAbw/uysmRvHPQuuk
+f06m4HbSBPm0ItqxO2KC8E/UOqt7fQa5Q1nnr7MB+fyl2QthNaxKe+qclPB/
+1JfL8Ew/+lyc2RK9AXXCkDy4tes+bfbT8+QgG2S/YTEvLTwMT//YzaODYS58
+5A4+a2cZywMaXw==
+=e9WG
+&mdash;&ndash;END PGP PUBLIC KEY BLOCK&mdash;&ndash;</p>
 </details>
 </content>
 <p>
