feat: add 2024 reading list

--- a/404.html
+++ b/404.html
@@ -14,15 +14,13 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://jcachada.dev/404.html" /><meta property="og:image" content="https://jcachada.dev/images/share.png"/><meta property="og:site_name" content="João Cachada&#39;s website" />
+<meta property="og:url" content="https://jcachada.dev/404.html" /><meta property="og:image" content="https://jcachada.dev/images/share.png" /><meta property="og:site_name" content="João Cachada&#39;s website" />
 
 
 
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://jcachada.dev/images/share.png"/>
-
-<meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://jcachada.dev/images/share.png" /><meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="The home of content for João Cachada, Senior Software Engineer and writer."/>
 
 
