--- a/not-a-product/index.html
+++ b/not-a-product/index.html
@@ -16,17 +16,15 @@ In my life, I have greatly benefitted from the transformative power of the Inter
 <meta property="og:description" content="This website is not a product. (And neither are you) To put it nicely, I am not a fan of the Internet as it exists today.
 In my life, I have greatly benefitted from the transformative power of the Internet. A lot of my closest friends and oldest friends are online friends - from Poland to the United Kingdom, I have found kinship with people from vastly different walks of life because I was able to talk to them, ignoring country borders and distance barriers that would have been prohibitive in most other times in history." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://jcachada.dev/not-a-product/" /><meta property="og:image" content="https://jcachada.dev/images/share.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://jcachada.dev/not-a-product/" /><meta property="og:image" content="https://jcachada.dev/images/share.png" /><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="João Cachada&#39;s website" />
 
 
 
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://jcachada.dev/images/share.png"/>
-
-<meta name="twitter:title" content="Not a Product"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://jcachada.dev/images/share.png" /><meta name="twitter:title" content="Not a Product"/>
 <meta name="twitter:description" content="This website is not a product. (And neither are you) To put it nicely, I am not a fan of the Internet as it exists today.
 In my life, I have greatly benefitted from the transformative power of the Internet. A lot of my closest friends and oldest friends are online friends - from Poland to the United Kingdom, I have found kinship with people from vastly different walks of life because I was able to talk to them, ignoring country borders and distance barriers that would have been prohibitive in most other times in history."/>
 
@@ -36,7 +34,7 @@ In my life, I have greatly benefitted from the transformative power of the Inter
 <meta itemprop="description" content="This website is not a product. (And neither are you) To put it nicely, I am not a fan of the Internet as it exists today.
 In my life, I have greatly benefitted from the transformative power of the Internet. A lot of my closest friends and oldest friends are online friends - from Poland to the United Kingdom, I have found kinship with people from vastly different walks of life because I was able to talk to them, ignoring country borders and distance barriers that would have been prohibitive in most other times in history.">
 
-<meta itemprop="wordCount" content="1278"><meta itemprop="image" content="https://jcachada.dev/images/share.png"/>
+<meta itemprop="wordCount" content="1278"><meta itemprop="image" content="https://jcachada.dev/images/share.png" />
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -314,7 +312,7 @@ prohibitive in most other times in history.</p>
 <p><strong>Human connection isn&rsquo;t a product</strong>. Inevitably, altering mediums like the Internet to treat attention as a product will alter the <em>content</em> of the communication. It will make it less personal, less interesting, less <em>human</em>. It will also make it more exploitative, formulaic and boring.</p>
 <p>Don&rsquo;t believe me? Pick any technology you want, from Squarespace to static site generators like Hugo. Can you find meaningful differences between the popular designs on them? Isn&rsquo;t it weird that at the same time, the Internet is so incredibly mature and powerful, but also so&hellip; same-y?</p>
 <p>I had a friend comment once that when they were reading gaming reviews in their favorite media outlets, they often said things like: &ldquo;Have you read this article on outlet Y?&rdquo; As it turned out, the article was actually on outlet Z. They just couldn&rsquo;t tell the difference, because there are often no distinguishing elements between corporate formulas designed to sell the same thing.</p>
-<p>And that&rsquo;s without mentioning the insane amount of AI-written, buzzword-filled, why-does-this-exist websites crowding your search engine results and preying on your clicks. Google a simple question (&ldquo;can cats eat lemons?&quot;) and you&rsquo;ll be bombarded with websites that find ways to stretch the answer to that simple question into a five thousand word article designed to check as many search engine checkboxes as possible, reader be damned.</p>
+<p>And that&rsquo;s without mentioning the insane amount of AI-written, buzzword-filled, why-does-this-exist websites crowding your search engine results and preying on your clicks. Google a simple question (&ldquo;can cats eat lemons?&rdquo;) and you&rsquo;ll be bombarded with websites that find ways to stretch the answer to that simple question into a five thousand word article designed to check as many search engine checkboxes as possible, reader be damned.</p>
 <p><a href="https://cadence.moe/">Quirky weird HTML websites with seals dancing across the screen</a> aren&rsquo;t SEO-friendly, even if you love seals. God, just think of that word for a second - SEO friendly. Why on Earth have we forced everyone who wants to have their own space on the Internet to worry about their SEO score? What do they care about how Search Engines decide to index (or not) their page? Is that needed to find an audience that is interested in your thoughts? Is it even <em>helpful</em>? Or is it a process entirely designed around finding an audience you can <em>monetize</em>, even if that monetization comes from rage-clicking and drama-baiting (in the worst-case scenario) or from changing what you say to be more <em>marketable</em> (the less worst-case scenario)?</p>
 <p>My thoughts aren&rsquo;t a product. My website isn&rsquo;t an exercise in Sales. When I see a quirky weird HTML website, the kind where I can tell that love and care went into choosing a font,  I don&rsquo;t think: &ldquo;too bad this won&rsquo;t sell&rdquo;. Instead, I think: &ldquo;Wow, that&rsquo;s pretty cool. This person put thought and love and passion into this. This makes me more interested in reading it.&rdquo;</p>
 <p>The issue, to be clear, isn&rsquo;t material design or any other way to build up your website - although I will admit that I am very unimpressed with the constant barrage of black-and-white or light-theme-dark-theme portfolio templates I see regularly, and they do feel like a bit of a waste of an opportunity to showcase your personality and earnestly connect with interesting people. But who am I to tell you what to do with your own space on the Internet?</p>
