--- a/say-hi/index.html
+++ b/say-hi/index.html
@@ -8,39 +8,37 @@
 <title>Say Hi | joão&#39;s website 🐟</title>
 <meta name="title" content="Say Hi" />
 <meta name="description" content="Please say hello if you:
- Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
- You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
+Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me. Please do not reach out to me if:
+You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="Say Hi" />
 <meta property="og:description" content="Please say hello if you:
- Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
- You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
+Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me. Please do not reach out to me if:
+You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://jcachada.dev/say-hi/" /><meta property="og:image" content="https://jcachada.dev/images/share.png"/><meta property="article:section" content="" />
+<meta property="og:url" content="https://jcachada.dev/say-hi/" /><meta property="og:image" content="https://jcachada.dev/images/share.png" /><meta property="article:section" content="" />
 
 <meta property="og:site_name" content="João Cachada&#39;s website" />
 
 
 
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://jcachada.dev/images/share.png"/>
-
-<meta name="twitter:title" content="Say Hi"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://jcachada.dev/images/share.png" /><meta name="twitter:title" content="Say Hi"/>
 <meta name="twitter:description" content="Please say hello if you:
- Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
- You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post."/>
+Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me. Please do not reach out to me if:
+You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post."/>
 
 
 
 <meta itemprop="name" content="Say Hi">
 <meta itemprop="description" content="Please say hello if you:
- Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me.  Please do not reach out to me if:
- You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post.">
+Want to say hi. Want to chat about something. Want to comment on my website or flag a bug. Want to share something with me that you think might interest me. Please do not reach out to me if:
+You want to sell something to me. You want to use me to sell something to my readers. You want to try and convince me to let you write a sponsored post.">
 
-<meta itemprop="wordCount" content="223"><meta itemprop="image" content="https://jcachada.dev/images/share.png"/>
+<meta itemprop="wordCount" content="223"><meta itemprop="image" content="https://jcachada.dev/images/share.png" />
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
