--- a/weblog/cyberpunk/index.html
+++ b/weblog/cyberpunk/index.html
@@ -5,29 +5,27 @@
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>cyberpunk | joão&#39;s website 🐟</title>
-<meta name="title" content="cyberpunk" />
+<title>Cyberpunk | joão&#39;s website 🐟</title>
+<meta name="title" content="Cyberpunk" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
 <meta name="keywords" content="blog,cyberpunk,debutnovel,development,fiction,game,journaling,reading,review,weblog,writing," />
 
 
-<meta property="og:title" content="cyberpunk" />
+<meta property="og:title" content="Cyberpunk" />
 <meta property="og:description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://jcachada.dev/weblog/cyberpunk/" /><meta property="og:image" content="https://jcachada.dev/images/share.png"/><meta property="og:site_name" content="João Cachada&#39;s website" />
+<meta property="og:url" content="https://jcachada.dev/weblog/cyberpunk/" /><meta property="og:image" content="https://jcachada.dev/images/share.png" /><meta property="og:site_name" content="João Cachada&#39;s website" />
 
 
 
 
-<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://jcachada.dev/images/share.png"/>
-
-<meta name="twitter:title" content="cyberpunk"/>
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:image" content="https://jcachada.dev/images/share.png" /><meta name="twitter:title" content="Cyberpunk"/>
 <meta name="twitter:description" content="The home of content for João Cachada, Senior Software Engineer and writer."/>
 
 
 
-<meta itemprop="name" content="cyberpunk">
+<meta itemprop="name" content="Cyberpunk">
 <meta itemprop="description" content="The home of content for João Cachada, Senior Software Engineer and writer.">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -294,7 +292,7 @@
 <content>
   
   
-  <h3 style="margin-bottom:0">Filtering for "cyberpunk"</h3>
+  <h3 style="margin-bottom:0">Filtering for "Cyberpunk"</h3>
   <small>
     <a href="/%20/weblog">Remove filter</a>
   </small>
