feat: add blogpost: the issue with AI FUD

--- a/weblog/reading/index.html
+++ b/weblog/reading/index.html
@@ -8,7 +8,7 @@
 <title>Reading | joão&#39;s website 🐟</title>
 <meta name="title" content="Reading" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
-<meta name="keywords" content="blog,cyberpunk,debutnovel,development,fiction,game,journaling,reading,review,weblog,writing," />
+<meta name="keywords" content="ai,blog,cyberpunk,debutnovel,development,fiction,game,journaling,llm,opinion,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="Reading" />
