--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>joão&#39;s website 🐟</title>
 <meta name="title" content="joão&#39;s website 🐟" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
-<meta name="keywords" content="ai,blog,cyberpunk,debutnovel,development,fiction,game,journaling,llm,opinion,reading,review,weblog,writing," />
+<meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,learning,llm,memory,opinion,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="" />
