fix: remove unfinished post

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
-<meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,learning,llm,memory,opinion,reading,review,weblog,writing," />
+<meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,llm,memory,opinion,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="404 Page not found" />
