--- a/weblog/grief/index.html
+++ b/weblog/grief/index.html
@@ -8,7 +8,7 @@
 <title>Grief | joão&#39;s website 🐟</title>
 <meta name="title" content="Grief" />
 <meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
-<meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,learning,llm,memory,opinion,reading,review,weblog,writing," />
+<meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,llm,memory,opinion,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="Grief" />
