--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
-<meta name="description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
+<meta name="description" content="João Cachada&#39;s digital garden." />
 <meta name="keywords" content="ai,blog,cyberpunk,death,debutnovel,development,fiction,game,grandfather,grief,journal,journaling,learning,llm,memory,opinion,reading,review,weblog,writing," />
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="The home of content for João Cachada, Senior Software Engineer and writer." />
+<meta property="og:description" content="João Cachada&#39;s digital garden." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://jcachada.dev/404.html" /><meta property="og:image" content="https://jcachada.dev/images/share.png" /><meta property="og:site_name" content="João Cachada&#39;s website" />
 
@@ -21,12 +21,12 @@
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="https://jcachada.dev/images/share.png" /><meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="The home of content for João Cachada, Senior Software Engineer and writer."/>
+<meta name="twitter:description" content="João Cachada&#39;s digital garden."/>
 
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="The home of content for João Cachada, Senior Software Engineer and writer.">
+<meta itemprop="description" content="João Cachada&#39;s digital garden.">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -231,7 +231,7 @@
 
   ul.blog-posts li {
     display: flex;
-    margin-bottom: 0.8em;
+    margin-bottom: 0.1em;
     line-height: 1.6;
   }
 
