--- a/weblog/2025-reading-list/index.html
+++ b/weblog/2025-reading-list/index.html
@@ -472,7 +472,7 @@
 <p><em>The Message</em>, by Ta-Nehisi Coates</p>
 </li>
 <li>
-<p>*The Shape of Snakes, by Minette Walters</p>
+<p><em>The Shape of Snakes</em>, by Minette Walters</p>
 </li>
 <li>
 <p><em>When the Saints</em>, by Sarah Mian 🇨🇦</p>
